# DPGTheminator

./: README.md  pyproject.toml
scripts/: color_models_data.txt  default_colors_data.txt  default_dark_theme_data.txt  generate_catppuccin_theme.py  generate_color_models.py  generate_dark_theme.py  generate_default_theme_colors.py  generate_light_theme.py  mock_dpg.py
src/dpgtheminator/: __init__.py  controller.py  exceptions.py  models.py  util.py
src/dpgtheminator/default_palettes/: catppuccin_frappe.json  catppuccin_latte.json  catppuccin_macchiato.json  catppuccin_mocha.json
src/dpgtheminator/default_themes/: catppuccin_frappe.json  catppuccin_latte.json  catppuccin_macchiato.json  catppuccin_mocha.json  dark.json  light.json  light2.json
src/dpgtheminator/demo/: __main__.py
src/dpgtheminator/gui/: theminator.py
