[project]
name = "dpgtheminator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zachary Parmley", email = "zachary.parmley@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dearpygui>=2.1.0",
    "dpgcontainers>=0.1.8",
    "msgspec>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cyclopts>=3.24.0",
    "httpx>=0.28.1",
    "ipdb>=0.13.13",
    "ipython>=9.5.0",
    "jedi>=0.19.2",
    "mypy>=1.17.1",
    "pynvim>=0.5.2",
    "pyperclip>=1.9.0",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
